update service section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                       <i class="fas fa-paint-brush"></i>
+                       <i class="fas fa-desktop"></i>
                             <div class="text">Frondend Development</div>
                             <p>Utilizing the latest technologies such as HTML, CSS, JavaScript, and Bootstrap to create interactive and dynamic user interfaces. My focus is on delivering a polished and engaging frontend experience.
                             </p>
@@ -84,7 +84,7 @@
                 
                 <div class="card">
                     <div class="box">
-                       <i class="fas fa-chart-line"></i>
+                       <i class="fas fa-server"></i>
                             <div class="text">Backend Development</div>
                             <p>Building powerful server-side applications using Python and Django. From authentication systems to complex data processing, I ensure that your application's backend is robust, secure,
                             </p>
@@ -94,7 +94,7 @@
 
             <div class="card">
                 <div class="box">
-                   <i class="fas fa-code"></i>
+                   <i class="fas fa-network-wired"></i>
                         <div class="text">RESTful API Development</div>
                         <p>Creating RESTful APIs to enable seamless communication between different parts of your application or with external services. I follow best practices to design APIs that are scalable, maintainable, and well-documented.
 </p></div>
