update index page

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                 <div class="column right">
                     <div class="text">I'm Nourin and I'm a <span class="typing-2"></span></div>
                     <p>A passionate full-stack developer with a deep love for transforming ideas into functional, user-friendly applications. My journey in the world of coding has been an exciting adventure, and I'm constantly driven by the desire to learn, create, and innovate.
-                        As a full-stack developer, I thrive in the dynamic realms of both front-end and back-end technologies. From crafting seamless user interfaces with HTML, CSS, and JavaScript to architecting robust server-side solutions with python, I revel in the entire development process. My proficiency extends to database design and management, API integration, and everything in between.
+                        As a full-stack developer, I thrive in the dynamic realms of both front-end and back-end technologies. 
                     </p>
-                    <p>
-                        Beyond the screen and lines of code, I find joy in various artistic and leisure pursuits. Music has a special place in my heart, providing the perfect soundtrack to both productive coding sessions and moments of relaxation.
-                        Traveling is another passion that fuels my creativity and broadens my perspective. Whether it's discovering new tech hubs, immersing myself in diverse cultures, or simply exploring the beauty of nature, every journey adds a unique flavor to my life and work.
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;From crafting seamless user interfaces with HTML, CSS, and JavaScript to architecting robust server-side solutions with python, I revel in the entire development process. My proficiency extends to database design and management, API integration, and everything in between.
+                        Beyond the screen and lines of code, I find joy in various artistic and leisure pursuits. Music has a special place in my heart, providing the perfect soundtrack to both productive coding sessions and moments of relaxation.</p><p>&nbsp;&nbsp;&nbsp;&nbsp;
+                        Traveling is another passion that fuels my creativity and broadens my perspective. Whether it's discovering new tech hubs, immersing myself in diverse cultures, or simply exploring the beauty of nature, every journey adds a unique flavor to my life and work.</p>
                     </p>
                     <a href="images/Nourin kt.pdf" download="nourin.pdf">Download CV</a>
                 </div>
@@ -112,7 +112,7 @@
             <div class="skills-content">
                 <div class="column left">
                 <div class="text">My creative skills & experiences.</div>
-                <p>I possess a comprehensive skill set that revolves around web development and programming, with a primary focus on Python. Proficient in Django, I excel in building robust and scalable web applications. My expertise extends to crafting RESTful APIs, ensuring seamless communication between different components of a web system. I am well-versed in front-end technologies such as HTML, CSS, and JavaScript, enabling me to create visually appealing and responsive user interfaces. Additionally, my proficiency in PHP enhances my ability to develop dynamic and interactive web pages. In terms of database management, I am adept at working with both PostgreSQL and MySQL, ensuring efficient data storage and retrieval. With a solid foundation in these technologies, I bring a holistic approach to web development, ensuring the successful implementation of projects from conception to execution. My skills encompass the entire development stack, making me a versatile and valuable asset in the field of web development.</p><a href="#">Read more</a>
+                <p>I possess a comprehensive skill set that revolves around web development and programming, with a primary focus on Python. Proficient in Django, I excel in building robust and scalable web applications.</p><p>&nbsp;&nbsp;&nbsp;&nbsp;My expertise extends to crafting RESTful APIs, ensuring seamless communication between different components of a web system. I am well-versed in front-end technologies such as HTML, CSS, and JavaScript, enabling me to create visually appealing and responsive user interfaces.</p><p>&nbsp;&nbsp;&nbsp;&nbsp;Additionally, my proficiency in PHP enhances my ability to develop dynamic and interactive web pages. In terms of database management, I am adept at working with both PostgreSQL and MySQL, ensuring efficient data storage and retrieval.</p><p>&nbsp;&nbsp;&nbsp;&nbsp;With a solid foundation in these technologies, I bring a holistic approach to web development, ensuring the successful implementation of projects from conception to execution. My skills encompass the entire development stack, making me a versatile and valuable asset in the field of web development.</p><a href="#">Read more</a>
             </div>
             <div class="column right">
                 <div class="bars">
@@ -236,7 +236,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Feel free to reach out and connect with me. My name is Nourin, and I am based in the vibrant city of Calicut, Kerala. Whether you have inquiries about my work, collaboration opportunities, or simply want to engage in a conversation about technology and development, I welcome your messages. You can contact me via email at <span style="color:crimson ;">nourinkt0098@gmail.com</span>. I am always open to discussing new projects, exploring potential collaborations, or even just chatting about shared interests. Looking forward to hearing from you and exploring how we can work together to bring your ideas to life.
+                    <p>Feel free to reach out and connect with me. My name is Nourin, and I am based in the vibrant city of Calicut, Kerala. Whether you have inquiries about my work, collaboration opportunities, or simply want to engage in a conversation about technology and development, I welcome your messages.</p><p>&nbsp;&nbsp;&nbsp;&nbsp;You can contact me via email at <span style="color:crimson ;">nourinkt0098@gmail.com</span>. I am always open to discussing new projects, exploring potential collaborations, or even just chatting about shared interests. Looking forward to hearing from you and exploring how we can work together to bring your ideas to life.
                     </p><div class="icons">
                     <div class="row">
                         <i class="fas fa-user"></i>
